<resources>
    <string name="app_name">RAsfalto</string>
    <string name="frase_de_efeito_1">Asfalto ruim deve ser consertado.</string>
    <string name="frase_de_efeito_2">RAsfalto (juntamente com as colaborações da população da cidade de Goiânia) auxilia motoristas da cidade provendo informações detalhadas dos locais onde o asfalto precisa de reparos.</string>
    <string name="user_name">Nome completo</string>
    <string name="user_birthdate">Data de nascimento</string>
    <string name="user_email">Endereço de e-mail</string>
    <string name="user_password">Senha de 6+ caracteres</string>
    <string name="password">Senha</string>
    <string name="user_phone">Número de telefone</string>
    <string name="user_gender">Sexo</string>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Feminino</string>
    <string name="sign_up_obs">* campos em itálico não são obrigatórios.</string>
    <string name="login">Entrar</string>
    <string name="nao_cadastro">Ainda não tem cadastro?</string>
    <string name="sign_up">Cadastrar-se</string>
    <string name="sign_up_type_text">Tipo de cadastro</string>
    <string name="sign_up_button_text">Cadastro manual</string>
    <string name="create_account_text">Criar nova conta</string>
    <string name="toast_new_account_success">Conta criada com sucesso</string>
    <string name="toast_new_account_failure">Falha ao criar a conta.</string>
    <string name="account_login_success">Autenticação valida</string>
    <string name="account_login_failure">Usuário inexistente</string>
    <string name="account_login_empty">Preencha os campos para continuar.</string>

    <string name="buracos_reportados">Buracos reportados</string>
</resources>
