<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backgroundAsfalto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/buraco_asfalto_blur_light_semitransparent_brown"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/create_account_text"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:fontFamily="sans-serif-light"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nomecadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emailcadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/senhacadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/datanasccadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_birthdate"
            android:inputType="date"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/telefonecadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_phone"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_gender"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_male"
                android:textSize="@dimen/abc_text_size_menu_material"
                android:textStyle="italic"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_female"
                android:textSize="@dimen/abc_text_size_menu_material"
                android:textStyle="italic"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_obs"
            android:textStyle="italic"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="36dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/background_material_light"
            android:background="@drawable/rounded_brown_button"
            android:text="@string/sign_up"
            android:onClick="onClick$signUp"/>
    </LinearLayout>

</RelativeLayout>