<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rasfalto.StartActivity">

    <ImageView
        android:id="@+id/backgroundAsfalto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/buraco_asfalto_semitransparent_brown"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rasfalto_logo"
        android:id="@+id/rasfalto_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/frase_de_efeito_1"
        android:id="@+id/frase_de_efeito_1"
        android:layout_below="@+id/rasfalto_logo"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/frase_de_efeito_2"
        android:layout_below="@id/frase_de_efeito_1"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/buttonCadastre_se"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:onClick="onClick$CreateAccount"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonEntrar"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttonCadastre_se"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick$Login"/>

</RelativeLayout>
