<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/backgroundAsfalto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/buraco_asfalto_blur_semitransparent_brown" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rasfalto_logo" />

    <LinearLayout
        android:id="@+id/formLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/rounded_brown_button"
            android:onClick="onClick$signIn"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/login"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
